# dense-subset-sum

./: Cargo.toml  README.md
.jjconflict-base-0/: .gitignore
.jjconflict-base-0/src/: compute.rs  empirical_regime.rs  mappings.rs  regime.rs
.jjconflict-base-0/src/commands/: compare.rs  density.rs  mod.rs
.jjconflict-base-0/src/count/: companion.rs  density_regime.rs  numeric.rs
.jjconflict-base-0/src/fixtures/: sets.rs
.jjconflict-side-0/benches/: signed_probe.rs
.jjconflict-side-0/scripts/: bench_all.sh
.jjconflict-side-0/src/: compute.rs  lib.rs  loss.rs  penalty.rs  stats.rs  transaction.rs
.jjconflict-side-0/src/count/: oracle.rs  radix.rs  sasamoto.rs
.jjconflict-side-0/src/fixtures/: mod.rs  sets.rs
.jjconflict-side-0/src/harness/: mod.rs
.jjconflict-side-0/src/validation/: mod.rs  per_coin.rs
.jjconflict-side-1/: README.md
.jjconflict-side-1/src/: ambiguity.rs  compute.rs  lib.rs
scripts/: fetch_cja_distribution.sh
src/: change_split.rs  cli.rs  compute.rs  dense_region.rs  density_regime.rs  estimator.rs  lib.rs  lookup.rs  loss.rs  main.rs  mappings.rs  probe.rs  radix.rs  regime.rs  sasamoto.rs  stats.rs  sumset.rs  transaction.rs
src/commands/: analysis.rs  compare.rs  density.rs  mod.rs
src/comparison/: core.rs  empirical.rs  mod.rs  monte_carlo.rs  report.rs
src/count/: denoms.rs  mod.rs  numeric.rs
src/fixtures/: mod.rs  wasabi2_false.rs  wasabi2_positive.rs
src/harness/: stats.rs
src/validation/: density_sweep.rs  mappings_pipeline.rs  mod.rs  per_coin.rs  sub_tx_estimates.rs
tests/: public_api.rs
(+34 files in other folders)
