[package]
name = "dense-subset-sum"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"

[dependencies]
coinjoin_analyzer = { git = "https://github.com/payjoin/cja", rev = "48ad16c13a05d902933638ee77b6b53a4da3de95" }
rand = { version = "0.8", features = ["std_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1.1"

[dev-dependencies]
proptest = "1"
